welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: type mismatch;
 found   : Unit
 required: String
	for (i <- 1 to a) {
               ^