welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
	for (i <- 1 to a) {
		if (i%3==0) return "Fizz"
		if (i%5==0) return "Buzz"
		if ((i%3==0)&&(i%5==0)) return "Fizz Buzz"
		else return "+a"
	}
}